# HinaView

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  licenses.json
assets/lang/: ar.json  be.json  bg.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fa.json  fi.json  fr.json  he.json  hr.json  hu.json  it.json  ja.json  ko.json  ku.json  lv.json  nl.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  sk.json  sl.json  sr.json  sv.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
icon_win/: HinaViewLogo.af  create_icon.ps1  icons.rc  icons_generated.rc
src/: app.rs  input.rs  main.rs  types.rs
src/app/: command_handler.rs  document_lifecycle.rs  document_session.rs  mode_controller.rs  navigation_commit_controller.rs  prefetch_controller.rs  ui_actions.rs  update_loop.rs  visible_request.rs  webtoon_runtime.rs
src/bookmark/: controller.rs  mod.rs  model.rs  service.rs  store.rs
src/bootstrap/: graphics.rs  logger.rs  mod.rs
src/cache/: cpu_cache.rs  gpu_cache.rs  gpu_uploader.rs  mod.rs  prefetch.rs  settings_adapter.rs  texture_index.rs  texture_manager.rs
src/camera/: mod.rs
src/color_management/: controller.rs  display_profile.rs  lcms2_ffi.rs  mod.rs  profile.rs
src/config/: app_config.rs  mod.rs  store.rs  window_snapshot.rs
src/database/: mod.rs
src/document/: archive.rs  archive_navigator.rs  format_probe.rs  logical_spread.rs  mod.rs  opening.rs  page_meta.rs  spread_builder.rs
src/filter/: mod.rs  params.rs
src/i18n/: localizer.rs  mod.rs
src/layout/: dual_layout.rs  mod.rs  placement.rs  scroll_layout.rs  single_layout.rs
src/pipeline/: concurrency_controller.rs  decode.rs  decode_executor.rs  job.rs  mod.rs  priority_queue.rs  resample.rs  result.rs  scheduler.rs  status.rs  types.rs  upload_processor.rs  upload_queue.rs  worker.rs  worker_pool.rs
src/renderer/: mod.rs  quad_batch.rs  shader.wgsl
src/runtime/: event_router.rs  interaction_handler.rs  mod.rs  redraw_handler.rs  window_state.rs
src/sampling/: halftone.rs  mip_level_decider.rs  mod.rs  preblur.rs
src/settings/: mod.rs  model.rs  service.rs
src/slideshow/: controller.rs  mod.rs
src/system/: mod.rs  single_instance.rs  start_menu.rs  win_registry.rs
src/ui/: favorites.rs  file_association.rs  file_association_icons.rs  mod.rs  shortcuts.rs  snapshot.rs
src/ui_overlay/: egui_toast_renderer.rs  (+5 more)
updater/: Cargo.toml
updater/src/: main.rs
(+46 files in other folders)
