[package]
name = "updater"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation"] }
